--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   ],
   "author": "Kemal Erdem",
   "license": "MIT",
+  "repository": "https://github.com/burnpiro/reveal-drawer",
   "devDependencies": {
     "@babel/core": "^7.13.8",
     "@babel/preset-env": "^7.13.9",
